--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           
            <li><a href="#one">Intuoduction</a></li>
            <li><a href="#four">About Us</a></li>
-           <li><a href="" target="_blank">New Tread</a></li>
+           <li><a href="https://campus.new-thread.com" target="_blank">New Tread</a></li>
            <li><a href="#two">Contact Us</a></li>
            <li><a href="#three">Q&A</a></li>
           
